--- a/world/python-trio/.artixlinux/pkgbase.yaml
+++ b/world/python-trio/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-trio
-  version: 0.26.2-2
+  version: 0.30.0-1
   arch:
     - any
   pkgname:
     - python-trio
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.26.2-2
+    version: 0.30.0-1
     packages:
-      - python-trio-0.26.2-2-any.pkg.tar.zst
+      - python-trio-0.30.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
