--- a/galaxy/certbot-nginx/.artixlinux/pkgbase.yaml
+++ b/galaxy/certbot-nginx/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: certbot-nginx
-  version: 4.0.0-1
+  version: 4.0.0-2
   arch:
     - any
   pkgname:
     - certbot-nginx
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 4.0.0-1
+    version: 4.0.0-2
     packages:
-      - certbot-nginx-4.0.0-1-any.pkg.tar.zst
+      - certbot-nginx-4.0.0-2-any.pkg.tar.zst
 team: galaxy
