--- a/world/gnome-weather/.artixlinux/pkgbase.yaml
+++ b/world/gnome-weather/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gnome-weather
-  version: 48.0-1
+  version: 48.0-2
   arch:
     - any
   pkgname:
     - gnome-weather
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.0-1
+    version: 48.0-2
     packages:
-      - gnome-weather-48.0-1-any.pkg.tar.zst
+      - gnome-weather-48.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
