--- a/world/openucx/.artixlinux/pkgbase.yaml
+++ b/world/openucx/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: openucx
-  version: 1.18.0-2
+  version: 1.18.0-3
   arch:
     - x86_64
   pkgname:
     - openucx
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.18.0-2
+    version: 1.18.0-3
     packages:
-      - openucx-1.18.0-2-x86_64.pkg.tar.zst
+      - openucx-1.18.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
