--- a/world/rdma-core/.artixlinux/pkgbase.yaml
+++ b/world/rdma-core/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: rdma-core
-  version: 56.1-1
+  version: 57.0-1
   arch:
     - x86_64
   pkgname:
     - rdma-core
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 56.1-1
+    version: 57.0-1
     packages:
-      - rdma-core-56.1-1-x86_64.pkg.tar.zst
+      - rdma-core-57.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
