--- a/world/xterm/.artixlinux/pkgbase.yaml
+++ b/world/xterm/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: xterm
-  version: 397-2
+  version: 398-1
   arch:
     - x86_64
   pkgname:
     - xterm
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 397-2
+    version: 398-1
     packages:
-      - xterm-397-2-x86_64.pkg.tar.zst
+      - xterm-398-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
