--- a/galaxy/libqtxdg/.artixlinux/pkgbase.yaml
+++ b/galaxy/libqtxdg/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libqtxdg
-  version: 4.1.0-5.1
+  version: 4.2.0-1
   arch:
     - x86_64
   pkgname:
     - libqtxdg
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 4.1.0-5.1
+    version: 4.2.0-1
     packages:
-      - libqtxdg-4.1.0-5.1-x86_64.pkg.tar.zst
+      - libqtxdg-4.2.0-1-x86_64.pkg.tar.zst
 team: galaxy
