--- a/galaxy/libqtxdg/PKGBUILD
+++ b/galaxy/libqtxdg/PKGBUILD
@@ -2,8 +2,8 @@
 # Co-Maintainer: Chih-Hsuan Yen <yan12125@archlinux.org>
 
 pkgname=libqtxdg
-pkgver=4.1.0
-pkgrel=5.1
+pkgver=4.2.0
+pkgrel=1
 pkgdesc="Library providing freedesktop.org XDG specs implementations for Qt"
 arch=("x86_64")
 url="https://github.com/lxqt/$pkgname"
@@ -18,21 +18,14 @@ provides=("libQt6Xdg.so" "libQt6XdgIconLoader.so")
 source=(
   "https://github.com/lxqt/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.xz"
   "https://github.com/lxqt/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.xz.asc"
-  https://github.com/lxqt/libqtxdg/commit/35ce74f1.patch
 )
-sha256sums=('0604d397d9561a6a6148930a2b131f2bdee86cec6cca304f7513a8ec7b8e8809'
-            'SKIP'
-            '81a0182f7a9adb726c4b052616039d3211fe9bacd129d1d5b12344db54582462')
+sha256sums=('a5d430218550d66fa806debce7c418db41268286b17bdab46b8ce3a58f0fe82a'
+            'SKIP')
 validpgpkeys=(
   "169704C6FB490C6892C7F23C37E0AF1FDA48F373"  # Jerome Leclanche <jerome@leclan.ch>
   "7C733BA5F585AAD669E4D23A42C9C8D3AF5EA5E3"  # Alf Gaida <agaida@siduction.org>
   "19DFDF3A579BD509DBB572D8BE793007AD22DF7E"  # Pedram Pourang <tsujan2000@gmail.com>
 )
-
-prepare() {
-  cd $pkgname-$pkgver
-  patch -p1 -i ../35ce74f1.patch # Adapt to Qt 6.9
-}
 
 build() {
   mkdir -p build
