--- a/galaxy/lximage-qt/.artixlinux/pkgbase.yaml
+++ b/galaxy/lximage-qt/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lximage-qt
-  version: 2.1.1-1
+  version: 2.2.0-1
   arch:
     - x86_64
   pkgname:
     - lximage-qt
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 2.1.1-1
+    version: 2.2.0-1
     packages:
-      - lximage-qt-2.1.1-1-x86_64.pkg.tar.zst
+      - lximage-qt-2.2.0-1-x86_64.pkg.tar.zst
 team: galaxy
