--- a/galaxy/lxqt-runner/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxqt-runner/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lxqt-runner
-  version: 2.1.2-1
+  version: 2.2.0-1
   arch:
     - x86_64
   pkgname:
     - lxqt-runner
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 2.1.2-1
+    version: 2.2.0-1
     packages:
-      - lxqt-runner-2.1.2-1-x86_64.pkg.tar.zst
+      - lxqt-runner-2.2.0-1-x86_64.pkg.tar.zst
 team: galaxy
