--- a/galaxy/qbittorrent/PKGBUILD
+++ b/galaxy/qbittorrent/PKGBUILD
@@ -10,8 +10,8 @@
 pkgbase=qbittorrent
 pkgname=(qbittorrent
          qbittorrent-nox)
-pkgver=5.0.4
-pkgrel=3
+pkgver=5.0.5
+pkgrel=1
 arch=(x86_64)
 url='https://www.qbittorrent.org'
 license=(GPL-2.0-or-later
@@ -28,8 +28,12 @@ makedepends=(boost
              qt6-svg
              qt6-tools)
 optdepends=('python: needed for torrent search tab')
-source=(git+https://github.com/qbittorrent/qBittorrent/#tag=release-$pkgver?signed)
-sha256sums=('5cb819d013d6b5633b6df318d919f94baaa0521b781e847f64639112ba2812be')
+source=(git+https://github.com/qbittorrent/qBittorrent/#tag=release-$pkgver
+        sysusers.conf
+        tmpfiles.conf)
+sha256sums=('5780872f133e556a401db272045ef2c84b750558bafc41823dc09528770d43c6'
+            '0f148c97cc5fae83fc5022b5f2da374b60a1e2f62a4faf01265e73a9f208825a'
+            '941a90f59d3400fff022a2c2239502eec3aac97b31d25f30593cf3d95b1d788b')
 validpgpkeys=('D8F3DA77AAC6741053599C136E4A2D025B7CC9A2') # sledgehammer999 <sledgehammer999@qbittorrent.org>
 
 build() {
@@ -57,4 +61,7 @@ package_qbittorrent-nox() {
 
   DESTDIR="$pkgdir" cmake --install build-nox
   install -Dm644 qBittorrent/COPYING -t "$pkgdir"/usr/share/licenses/$pkgname
+
+  install -Dm644 sysusers.conf "$pkgdir/usr/lib/sysusers.d/qbittorrent.conf"
+  install -Dm644 tmpfiles.conf "$pkgdir/usr/lib/tmpfiles.d/qbittorrent.conf"
 }
