--- a/world/nftables/.artixlinux/pkgbase.yaml
+++ b/world/nftables/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: nftables
-  version: 1:1.1.2-1
+  version: 1:1.1.3-1
   arch:
     - x86_64
   pkgname:
     - nftables
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:1.1.2-1
+    version: 1:1.1.3-1
     packages:
-      - nftables-1:1.1.2-1-x86_64.pkg.tar.zst
+      - nftables-1:1.1.3-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
