--- a/world/nlohmann-json/.artixlinux/pkgbase.yaml
+++ b/world/nlohmann-json/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: nlohmann-json
-  version: 3.12.0-1
+  version: 3.12.0-2
   arch:
     - any
   pkgname:
     - nlohmann-json
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.12.0-1
+    version: 3.12.0-2
     packages:
-      - nlohmann-json-3.12.0-1-any.pkg.tar.zst
+      - nlohmann-json-3.12.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
