--- a/world/python-dask/.artixlinux/pkgbase.yaml
+++ b/world/python-dask/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-dask
-  version: 2025.3.0-1
+  version: 2025.4.0-2
   arch:
     - any
   pkgname:
     - python-dask
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2025.3.0-1
+    version: 2025.4.0-2
     packages:
-      - python-dask-2025.3.0-1-any.pkg.tar.zst
+      - python-dask-2025.4.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
