--- a/world/qt5pas/.artixlinux/pkgbase.yaml
+++ b/world/qt5pas/.artixlinux/pkgbase.yaml
@@ -1,17 +1,17 @@
 ---
 pkgbase:
   name: qt5pas
-  version: 2.6.2.2.6-2
+  version: 1:1.2.15-2
   arch:
     - x86_64
   pkgname:
     - qt5pas
 actions:
-  addRepo: null
+  addRepo: world
   removeRepo: null
-  triggersBuild: false
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
 repos:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.6.2.2.6-2
+    version: 1:1.2.15-2
     packages:
-      - qt5pas-2.6.2.2.6-2-x86_64.pkg.tar.zst
+      - qt5pas-1:1.2.15-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -50,5 +50,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: null
-    packages: []
+    version: 1:1.2.15-1
+    packages:
+      - qt5pas-1:1.2.15-1-x86_64.pkg.tar.zst
+team: galaxy
