--- a/world/qt5pas/PKGBUILD
+++ b/world/qt5pas/PKGBUILD
@@ -1,10 +1,11 @@
-# Maintainer: artist <artist@artixlinux.org>
+# Maintainer: BlackIkeEagle <ike DOT devolder AT gmail DOT com>
 # Contributor: rebel <novakpetya at yahoo dot co dot uk>
 
 pkgname=qt5pas
-_lazarus_tag=2_2_6
-_lazarus_version=2.2.6
-pkgver=2.6.$_lazarus_version
+_lazarus_tag=3_8
+_lazarus_version=3.8.0
+epoch=1
+pkgver=1.2.15
 pkgrel=2
 pkgdesc='Free Pascal Qt5 binding library updated by lazarus IDE'
 arch=('x86_64')
@@ -13,7 +14,7 @@ license=('LGPL3')
 depends=('qt5-base' 'qt5-x11extras')
 options=(libtool staticlibs)
 source=("https://gitlab.com/freepascal.org/lazarus/lazarus/-/archive/lazarus_${_lazarus_tag}/lazarus-lazarus_${_lazarus_tag}.tar.bz2")
-sha512sums=('ca618fed386ef09af15e1215cdc3f04d945dbbe1b40c477a5b3a0cee9fe791077b4e435dc798d27866221ef43732083511227de0cf6f96896166869280994af3')
+sha512sums=('c3b78f50fd78fba9a0f171136772303dc6ecb2ba7fe1f587cae6c99091129bcab87855fc15edb37aee7d9f6d7e14af987882bc0073e4fdfa04518da34a2427b1')
 
 build() {
     cd "lazarus-lazarus_${_lazarus_tag}/lcl/interfaces/qt5/cbindings"
