--- a/world/appstream/.artixlinux/pkgbase.yaml
+++ b/world/appstream/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: appstream
-  version: 1.0.4-1
+  version: 1.0.5-1
   arch:
     - x86_64
   pkgname:
@@ -27,17 +27,20 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 1.0.4-2
+    packages:
+      - appstream-1.0.4-2-x86_64.pkg.tar.zst
+      - appstream-qt5-1.0.4-2-x86_64.pkg.tar.zst
+      - appstream-qt-1.0.4-2-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.0.4-1
+    version: 1.0.5-1
     packages:
-      - appstream-1.0.4-1-x86_64.pkg.tar.zst
-      - appstream-qt5-1.0.4-1-x86_64.pkg.tar.zst
-      - appstream-qt-1.0.4-1-x86_64.pkg.tar.zst
+      - appstream-1.0.5-1-x86_64.pkg.tar.zst
+      - appstream-qt5-1.0.5-1-x86_64.pkg.tar.zst
+      - appstream-qt-1.0.5-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
