--- a/world/gucharmap/.artixlinux/pkgbase.yaml
+++ b/world/gucharmap/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: gucharmap
-  version: 15.1.1-1
+  version: 15.1.5-1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 15.1.1-1
+    version: 15.1.5-1
     packages:
-      - gucharmap-15.1.1-1-x86_64.pkg.tar.zst
+      - gucharmap-15.1.5-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
