--- a/system/s-nail/.artixlinux/pkgbase.yaml
+++ b/system/s-nail/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: s-nail
-  version: 14.9.24-2
+  version: 14.9.25-1
   arch:
     - x86_64
   pkgname:
     - s-nail
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: system
+  removeRepo: system-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -22,9 +22,9 @@ repos:
     version: null
     packages: []
   system:
-    version: 14.9.24-2
+    version: 14.9.25-1
     packages:
-      - s-nail-14.9.24-2-x86_64.pkg.tar.zst
+      - s-nail-14.9.25-1-x86_64.pkg.tar.zst
   world-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: system
