--- a/system/s-nail/PKGBUILD
+++ b/system/s-nail/PKGBUILD
@@ -1,29 +1,28 @@
-# Maintainer: Nathan <ndowens@artixlinux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Stéphane Gaudreault <stephane@archlinux.org>
 # Contributor: Sergej Pupykin <pupykin.s@arch@gmail.com>
 # Contributor: Andreas Wagner <Andreas.Wagner@em.uni-frankfurt.de>
 
 pkgname=s-nail
-pkgver=14.9.24
-pkgrel=2
+pkgver=14.9.25
+pkgrel=1
 pkgdesc='Environment for sending and receiving mail'
 url='https://www.sdaoden.eu/code.html#s-nail'
 license=('custom:BSD')
 arch=('x86_64')
 depends=('openssl' 'krb5' 'libidn2')
+makedepends=('git')
 optdepends=('smtp-forwarder: for sending mail')
-validpgpkeys=('EE19E1C1F2F7054F8D3954D8308964B51883A0DD')
-source=("https://www.sdaoden.eu/downloads/${pkgname}-${pkgver}.tar.xz"{,.asc})
-sha512sums=('03f6a6f446391b6f91ed3c8875c3e7fdfac9d4e77ea1d52a7e98aa84cfd0edae137d5b9afba3bdc9a31ab67cee5237930b74b42ae3acb54aee4758553a4f1df2'
-            'SKIP')
-
 backup=('etc/mail.rc')
 replaces=('mailx' 'mailx-heirloom' 'heirloom-mailx')
 provides=('mailx' 'mailx-heirloom' 'heirloom-mailx')
 conflicts=('mailx' 'mailx-heirloom' 'heirloom-mailx')
+source=("git+https://git.sdaoden.eu/scm/s-nail.git#tag=v${pkgver}?signed")
+sha512sums=('9225f543455c5befc88bb7fe9f5267eff43519020e09ffd0a2117f871f2a60487e3292bbede900716a687b7ab68b5c672e314a51b1282f768f2e5e4f9fb3fd3a')
+validpgpkeys=('EE19E1C1F2F7054F8D3954D8308964B51883A0DD')
 
 build() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd ${pkgname}
 	export CFLAGS+=" $CPPFLAGS"
 	make \
 		VAL_PREFIX=/usr \
@@ -38,12 +37,12 @@ build() {
 }
 
 check() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd ${pkgname}
 	make test
 }
 
 package() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd ${pkgname}
 	make DESTDIR="${pkgdir}" install
 	ln -sf mail "${pkgdir}"/usr/bin/mailx
 	ln -sf mail.1.gz "${pkgdir}"/usr/share/man/man1/mailx.1.gz
