--- a/world/breezy/.artixlinux/pkgbase.yaml
+++ b/world/breezy/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: breezy
-  version: 3.3.9-4
+  version: 3.3.11-1
   arch:
     - x86_64
   pkgname:
     - breezy
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.3.9-4
+    version: 3.3.11-1
     packages:
-      - breezy-3.3.9-4-x86_64.pkg.tar.zst
+      - breezy-3.3.11-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
