--- a/world/dolphin/PKGBUILD
+++ b/world/dolphin/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=dolphin
 pkgver=25.04.0
-pkgrel=1
+pkgrel=2
 pkgdesc='KDE File Manager'
 arch=(x86_64)
 url='https://apps.kde.org/dolphin/'
@@ -55,12 +55,18 @@ optdepends=('ffmpegthumbs: video thumbnails'
             'purpose: share context menu')
 groups=(kde-applications
         kde-system)
-source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
+source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig}
+        https://invent.kde.org/system/dolphin/-/commit/6032b785.patch)
 sha256sums=('8997ec04ef12af22647dfef67b15ea8f1304f7ae076c7b8fd53184a55a012a18'
-            'SKIP')
+            'SKIP'
+            'fd189cf40e65fd48b3ffb83f7d2e4315572fd519261fd05682b06b7722c0adad')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < 6032b785.patch # Fix session restore
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
