--- a/world/kwindowsystem/.artixlinux/pkgbase.yaml
+++ b/world/kwindowsystem/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: kwindowsystem
-  version: 6.12.0-3
+  version: 6.13.0-1
   arch:
     - x86_64
   pkgname:
     - kwindowsystem
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.12.0-3
+    version: 6.13.0-1
     packages:
-      - kwindowsystem-6.12.0-3-x86_64.pkg.tar.zst
+      - kwindowsystem-6.13.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
