--- a/galaxy/nvm/.artixlinux/pkgbase.yaml
+++ b/galaxy/nvm/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: nvm
-  version: 0.40.2-3
+  version: 0.40.3-1
   arch:
     - any
   pkgname:
     - nvm
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.40.2-3
+    version: 0.40.3-1
     packages:
-      - nvm-0.40.2-3-any.pkg.tar.zst
+      - nvm-0.40.3-1-any.pkg.tar.zst
 team: galaxy
