--- a/world/parallel/.artixlinux/pkgbase.yaml
+++ b/world/parallel/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: parallel
-  version: 20250222-1
+  version: 20250422-1
   arch:
     - any
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - parallel-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 20250222-1
+    version: 20250422-1
     packages:
-      - parallel-20250222-1-any.pkg.tar.zst
-      - parallel-docs-20250222-1-any.pkg.tar.zst
+      - parallel-20250422-1-any.pkg.tar.zst
+      - parallel-docs-20250422-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
